new changes on develop

--- a/lesson3/templates/index.html
+++ b/lesson3/templates/index.html
@@ -7,6 +7,11 @@
 <link rel="stylesheet" href="{% static 'styles/index.css' %}">
 </head>
 <body>
+<ul>
+  <li><a href="http://127.0.0.1:8000/index">Home</a></li>
+  <li><a href="http://127.0.0.1:8000/records">Records</a></li>
+  <li><a href="http://127.0.0.1:8000/contact">Contact</a></li>
+</ul>
 <h1>Welcome to Django-DevOps </h1>
 </body>
 </html>
